--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Detalles.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Detalles.cshtml
@@ -104,17 +104,19 @@
 
 
 @*Rol editable*@
-                <dt>
-                    Rol
-                </dt>
+            
 
-                <dd>
-                    <select>
-                        <option value="admin">Administrador</option>
-                        <option value="usser">Usuario</option>
-                        <option value="desarr">Desarrollador</option>
-                    </select>
-                </dd>
+                <div class="form-group">
+                     <label class="control-label col-md-2">Rol:</label>
+                     <div class="col-md-10" style="padding-top:0.5em;">
+                         @Html.DropDownListFor(model => model.Role,
+               new[] { new SelectListItem() { Text = "-- Rol no Asignado --", Value = "" },
+               new SelectListItem() { Text = "Administrador", Value = "1" },
+               new SelectListItem() { Text = "Desarrollador", Value = "2" },
+               new SelectListItem() { Text = "Usuario", Value = "3" } }, new { @class = "form-control" })
+
+                     </div>
+                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Aceptar" class="btn btn-primary" />
