inicio de la creacion ReqFun

--- a/ProyectoInge1/ProyectoInge1/Views/Shared/_Layout.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Shared/_Layout.cshtml
@@ -41,7 +41,8 @@
                     {
                       <li>@Html.ActionLink("Usuarios", "Index", "Usuarios")</li>
                     }*/
-                    }                   
+                    }    
+                    <li>@Html.ActionLink("Prueba", "Create", "ReqFuncional")</li>               
                  </ul>
                 @Html.Partial("_LoginPartial")
             </div>
