--- a/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
@@ -31,6 +31,14 @@
             </div>
         </div>
         <div class="form-group">
+            @Html.CustomLabelFor(model => model.proyecto.fechaInicio, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input class="date-picker" />
+                @Html.TextBox("YourTextBox", "", new { @class = "date-picker" })
+                @Html.ValidationMessageFor(model => model.ReleaseDate)   
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-5">
                 <input type="submit" value="Aceptar" class="btn btn-primary" />
                 <div class="btn btn-danger" style="color:white;" />
