--- a/ProyectoInge1/ProyectoInge1/Views/Shared/_Layout.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Shared/_Layout.cshtml
@@ -6,7 +6,16 @@
     <title>@ViewBag.Title - Control de proyectos</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    <link href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css" />
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+    <script type='text/javascript'>
+    $(function(){
+      $('.date-picker').datepicker();
+    })
+    </script>
+    <meta charset="utf-8">
+    <title>JS Bin</title>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
