--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Create.cshtml
@@ -7,13 +7,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Crear</h2>
+<h2>Gestión de usuarios</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     <div class="form-horizontal">
-        <h4>Usuario</h4>
+        <h4>Crear usuario</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
