--- a/ProyectoInge1/ProyectoInge1/Views/Shared/_Layout.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     {
                        <li>@Html.ActionLink("Usuarios", "Index", "Usuarios")</li>
                        <li>@Html.ActionLink("Roles", "Index", "Roles")</li>
+                        <li>@Html.ActionLink("Requerimientos", "Index", "ReqFuncional")</li>
                        <!--ESTE IF CONTIENE LOS AQUELLAS PESTAÑAS QUE SOLO UN ADMINISTRADOR PODRIA VER-->
                         /*string[] roles = Roles.GetRolesForUser();
                         foreach (string role in roles)
