Index Requerimiento funcional LISTO :-)

--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Index.cshtml
@@ -51,7 +51,7 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+            <tr id='@(item.id)' onclick="gotoDetails(this)">
                 <td>
                     @Html.DisplayFor(modelItem => item.nombre)
                 </td>
@@ -70,3 +70,9 @@
 </table>
 
 <br />
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+
+<script src="../../Scripts/jquery_ReqFuncionales.js"></script>
