--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Create.cshtml
@@ -19,7 +19,7 @@
         <div class="form-group">
             @Html.CustomLabelFor(model => model.modeloUsuario.cedula, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.modeloUsuario.cedula, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.modeloUsuario.cedula, new { htmlAttributes = new { @class = "form-control", placeholder = "123456789" } })
                 @Html.ValidationMessageFor(model => model.modeloUsuario.cedula, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -47,14 +47,14 @@
         <div class="form-group">
             <label class="control-label col-md-2">Telefono 1:</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.modeloTelefono1.numero, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.modeloTelefono1.numero, new { htmlAttributes = new { @class = "form-control", placeholder = "88888888" } })
                 @Html.ValidationMessageFor(model => model.modeloTelefono1.numero, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-md-2">Telefono 2:</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.modeloTelefono2.numero, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.modeloTelefono2.numero, new { htmlAttributes = new { @class = "form-control", placeholder = "88888888" } })
                 @Html.ValidationMessageFor(model => model.modeloTelefono2.numero, "", new { @class = "text-danger" })
             </div>
         </div>
