--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
@@ -35,14 +35,20 @@
                 @Html.ValidationMessageFor(model => model.modulo, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="form-group">
-            <label class="control-label col-md-2">Descripcion:</label>
+        <div class="row">
+            <label class="control-label col-md-4">Descripcion:</label>
+            <label class="control-label col-md-4">Observaciones:</label>
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control" } })
-                
-                <!--Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { class = "form-control" } })-->
                 @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger" })
+                @Html.TextAreaFor(model => model.observaciones, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.observaciones, "", new { @class = "text-danger" })
             </div>
+        </div>
+        <label class="control-label col-md-2">Imagen:</label>
+        <div class="editor-field">
+            <input id="ImagePath" title="Upload a product image"
+                   type="file" name="file" />
         </div>
     </div>
 
