--- a/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
@@ -6,6 +6,8 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@Styles.Render("~/Content/datepicker")
+@Scripts.Render("~/bundles/datePicker")
 
 <h2>Create</h2>
 
@@ -26,18 +28,23 @@
         <div class="form-group">
             @Html.CustomLabelFor(model => model.proyecto.descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.proyecto.descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.proyecto.descripcion, new { htmlAttributes = new { @class = "form-control", placeholder = "..." } })
                 @Html.ValidationMessageFor(model => model.proyecto.descripcion, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             @Html.CustomLabelFor(model => model.proyecto.fechaInicio, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input class="date-picker" />
-                @Html.TextBox("YourTextBox", "", new { @class = "date-picker" })
-                @Html.ValidationMessageFor(model => model.ReleaseDate)   
+                @Html.EditorFor(model => model.proyecto.fechaInicio, new { @class = "form-control datecontrol" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.CustomLabelFor(model => model.proyecto.fechaFinal, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.proyecto.fechaFinal, new { @class = "form-control datecontrol" })
+            </div>
+        </div>
+        <br/>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-5">
                 <input type="submit" value="Aceptar" class="btn btn-primary" />
@@ -49,6 +56,4 @@
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-
 }
-
