--- a/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
@@ -21,29 +21,29 @@
         <div class="form-group">
             @Html.CustomLabelFor(model => model.proyecto.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.proyecto.nombre, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.proyecto.nombre, new { htmlAttributes = new { @class = "form-control"} })
                 @Html.ValidationMessageFor(model => model.proyecto.nombre, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             @Html.CustomLabelFor(model => model.proyecto.descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.proyecto.descripcion, new { htmlAttributes = new { @class = "form-control", placeholder = "..." } })
+                @Html.EditorFor(model => model.proyecto.descripcion, new { htmlAttributes = new { @class = "form-control", placeholder = "50 Carácteres máximo" } })
                 @Html.ValidationMessageFor(model => model.proyecto.descripcion, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             @Html.CustomLabelFor(model => model.proyecto.fechaInicio, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.proyecto.fechaInicio, new { @class = "form-control datecontrol" })
+                @Html.TextBoxFor(model => model.proyecto.fechaInicio, new { @class = "form-control datepicker", placeholder = "DATE" })
             </div>
         </div>
         <div class="form-group">
             @Html.CustomLabelFor(model => model.proyecto.fechaFinal, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.proyecto.fechaFinal, new { @class = "form-control datecontrol" })
+                @Html.TextBoxFor(model => model.proyecto.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE" })
             </div>
-        </div>
+        </div>*
         <br/>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-5">
@@ -56,4 +56,16 @@
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+
+<script type="text/javascript">
+    $(function () {
+        $('.datepicker, .datepicker2').datepicker("setDate", new Date()); //Initialise any date pickers
+    });
+    $(".datepicker").on("dp.change", function (e) {
+        $('.datepicker2').data("DatePicker").setMinDate(e.date);
+    });
+    $(".datepicker2").on("dp.change", function (e) {
+        $('.datepicker').data("DatePicker").setMaxDate(e.date);
+    });
+</script>
 }
