--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
@@ -35,27 +35,81 @@
                 @Html.ValidationMessageFor(model => model.modulo, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="row">
-            <label class="control-label col-md-4">Descripcion:</label>
-            <label class="control-label col-md-4">Observaciones:</label>
+
+        <div class="form-group">
+            <label class="control-label col-md-2">Descripcion:</label>
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2">Observaciones:</label>
+            <div class="col-md-10">
                 @Html.TextAreaFor(model => model.observaciones, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.observaciones, "", new { @class = "text-danger" })
             </div>
         </div>
-        <label class="control-label col-md-2">Imagen:</label>
-        <div class="editor-field">
-            <input id="ImagePath" title="Upload a product image"
-                   type="file" name="file" />
+        <div class="form-group">
+            <label class="control-label col-md-2">Imagen:</label>
+            <div class="editor-field">
+                <input id="ImagePath" title="Upload a product image"
+                       type="file" name="file" />
+            </div>
         </div>
-    </div>
+            <div class="form-group">
+                <label class="control-label col-md-2">Fuente:</label>
+                <div class="col-md-10">
+                    <!--Html.EditorFor(model => model , new { htmlAttributes = new { class = "form-control" } })
+                Html.ValidationMessageFor(model => model.modulo, "", new { class = "text-danger" })-->
+
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-md-2">Responsable 1:</label>
+                <div class="col-md-10">
+                    <!--Html.EditorFor(model => model , new { htmlAttributes = new { class = "form-control" } })
+                Html.ValidationMessageFor(model => model.modulo, "", new { class = "text-danger" })-->
+
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-md-2">Responsable 2:</label>
+                <div class="col-md-10">
+                    <!--Html.EditorFor(model => model , new { htmlAttributes = new { class = "form-control" } })
+                Html.ValidationMessageFor(model => model.modulo, "", new { class = "text-danger" })-->
+
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-md-2">Fecha Inicial:</label>
+                <div class="col-md-10">
+                    @Html.TextBoxFor(model => model.fechaInicial, new { @class = "form-control datepicker", placeholder = "DATE" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-md-2">Fecha Final:</label>
+                <div class="col-md-10">
+                    @Html.TextBoxFor(model => model.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE" })
+                </div>
+            </div>
+        </div>
 
 }
 
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+
+    <script type="text/javascript">
+                        $(function () {
+                            $('.datepicker, .datepicker2').datepicker("setDate", new Date()); //Initialise any date pickers
+                        });
+                        $(".datepicker").on("dp.change", function (e) {
+                            $('.datepicker2').data("DatePicker").setMinDate(e.date);
+                        });
+                        $(".datepicker2").on("dp.change", function (e) {
+                            $('.datepicker').data("DatePicker").setMaxDate(e.date);
+                        });
+    </script>
 
 }
