--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
@@ -43,6 +43,13 @@
                 @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger" })
             </div>
         </div>
+        <!--<div class="form-group">
+            <label class="control-label col-md-2">Prueba:</label>
+            <div class="col-md-10">
+                Html.TextAreaFor(model => model. , new { htmlAttributes = new { class = "form-control" } })
+                Html.ValidationMessageFor(model => model.descripcion, "", new { class = "text-danger" })
+            </div>
+        </div>-->
         <div class="form-group">
             <label class="control-label col-md-2">Observaciones:</label>
             <div class="col-md-10">
@@ -92,7 +99,19 @@
                 <div class="col-md-10">
                     @Html.TextBoxFor(model => model.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE" })
                 </div>
-            </div>
+
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-5">
+                        <input type="submit" value="Aceptar" class="btn btn-primary" />
+                        <div class="btn btn-danger" style="color:white;" />
+                        @Html.ActionLink("Cancelar", "Index", null, new { @style = "color:#FFFFFF;" })
+                    </div>
+                </div>
+               <!-- <div class="col-md-offset-2 col-md-5">-->
+
+
+                </div>
         </div>
 
 }
