avance en el detalles de requerimiento

--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Detalles.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Detalles.cshtml
@@ -132,7 +132,7 @@
         <div class="form-horizontal">
             <a class="btn btn-success" onclick="esconderEditar()">Modificar</a>
             <div class="col-lg-2 col-lg-push-6">
-                <a class="btn btn-danger" id='@(Model.modeloUsuario.cedula)' onclick="borrar(this)">Eliminar</a>
+                <a class="btn btn-danger" id='@(Model.modeloUsuario.cedula)' onclick="borrar(this, 'Telecomunicaciones')">Eliminar</a>
             </div>
             <dl class="dl-horizontal">
 
