--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
@@ -18,9 +18,17 @@
             <label class="control-label col-md-2">id:</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.RequerimientosF.id, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RequerimientosF, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.RequerimientosF.id, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            <label class="control-label col-md-2">proyecto:</label>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.RequerimientosF.nomProyecto, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.RequerimientosF.nomProyecto, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
         <div class="form-group">
             <label class="control-label col-md-2">Nombre:</label>
             <div class="col-md-10">
