--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Create.cshtml
@@ -14,66 +14,70 @@
         <h4>Crear</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <label class="control-label col-md-2">id:</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RequerimientosF.id, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RequerimientosF.id, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-md-2">proyecto:</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RequerimientosF.nomProyecto, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RequerimientosF.nomProyecto, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        <!--AGREGAR UN ID DE REQUERIMIENTO-->
+        <label class="control-label col-md-2">id</label>
+        <div class="col-md-10">
+            <div class="form-group">
+               
+                @Html.EditorFor(model => model.Requerimientos.id , new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Requerimientos.id, "", new { @class = "text-danger" })
+           </div>
+             </div>
 
-        <div class="form-group">
-            <label class="control-label col-md-2">Nombre:</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RequerimientosF.nombre, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RequerimientosF.nombre, "", new { @class = "text-danger" })
+            <!--AGREGAR UN PROYECTO DE REQUERIMIENTO-->
+            <div class="form-group">
+                <label class="control-label col-md-2">proyecto</label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Requerimientos.nomProyecto, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Requerimientos.nomProyecto, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-md-2">Sprint:</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RequerimientosF.sprint, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RequerimientosF.sprint, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-md-2">Modulo:</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RequerimientosF.modulo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RequerimientosF.modulo, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <label class="control-label col-md-2">Descripcion:</label>
-            <div class="col-md-10">
-                @Html.TextAreaFor(model => model.RequerimientosF.descripcion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RequerimientosF.descripcion, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <label class="control-label col-md-2">Nombre:</label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Requerimientos.nombre, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Requerimientos.nombre, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-md-2">Observaciones:</label>
-            <div class="col-md-10">
-                @Html.TextAreaFor(model => model.RequerimientosF.observaciones, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RequerimientosF.observaciones, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <label class="control-label col-md-2">Sprint:</label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Requerimientos.sprint, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Requerimientos.sprint, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-md-2">Imagen:</label>
-            <div class="editor-field">
-                <input id="ImagePath" title="Upload a product image"
-                       type="file" name="file" />
-                <!--Html.TextAreaFor(model => model.RequerimientosF.imagen , new { htmlAttributes = new { class = "form-control" } })-->
-                @Html.ValidationMessageFor(model => model.RequerimientosF.imagen, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <label class="control-label col-md-2">Modulo:</label>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Requerimientos.modulo, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Requerimientos.modulo, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
+
+            <div class="form-group">
+                <label class="control-label col-md-2">Descripcion:</label>
+                <div class="col-md-10">
+                    @Html.TextAreaFor(model => model.Requerimientos.descripcion, new { @class = "form-control", rows = "4"  })
+                    @Html.ValidationMessageFor(model => model.Requerimientos.descripcion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-md-2">Observaciones:</label>
+                <div class="col-md-10">
+                    @Html.TextAreaFor(model => model.Requerimientos.observaciones, new { @class = "form-control", rows = "4" })
+                    @Html.ValidationMessageFor(model => model.Requerimientos.observaciones, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-md-2">Imagen:</label>
+                <div class="editor-field">
+                    <input id="ImagePath" title="Upload a product image"
+                           type="file" name="file" />
+                    <!--Html.TextAreaFor(model => model.RequerimientosF.imagen , new { htmlAttributes = new { class = "form-control" } })-->
+                    @Html.ValidationMessageFor(model => model.Requerimientos.imagen, "", new { @class = "text-danger" })
+                </div>
+            </div>
             <div class="form-group">
                 <label class="control-label col-md-2">Fuente:</label>
                 <div class="col-md-10">
@@ -90,56 +94,57 @@
             <div class="form-group">
                 <label class="control-label col-md-2">Responsable 2:</label>
                 <div class="col-md-10">
-                    @Html.DisplayFor(model => model.ReqFunUsu.nombre ) 
+                    @Html.DisplayFor(model => model.Usuarios.nombre)
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-md-2">Fecha Inicial:</label>
                 <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.RequerimientosF.fechaInicial, new { @class = "form-control datepicker", placeholder = "DATE" })
+                    @Html.TextBoxFor(model => model.Requerimientos.fechaInicial, new { @class = "form-control datepicker", placeholder = "DATE" })
                 </div>
             </div>
 
-        <div class="form-group">
-            <label class="control-label col-md-2">Fecha Final:</label>
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.RequerimientosF.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Criterios:</label>
-            <div class="col-md-10">
-               
-            </div>
-        </div>
-        <form action="demo_form.asp">
-            Criterio: <input type="text" name="t"><br>
-
-        </form>
-        <button onclick="listar()">Try it</button>
-        <script>
-var c =[] ;
-var t;
-document.getElementById("demo").innerHTML = c;
-
-function listar() {
-    t="VVV";
-    c.push(t,"<button> Cambiar </button>  <button> Eliminiar </button>  <br> ");
-    document.getElementById("demo").innerHTML = c;
-}
-        </script>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-5">
-                        <input type="submit" value="Aceptar" class="btn btn-primary" />
-                        <div class="btn btn-danger" style="color:white;" />
-                        @Html.ActionLink("Cancelar", "Index", null, new { @style = "color:#FFFFFF;" })
-                    </div>
+            <div class="form-group">
+                <label class="control-label col-md-2">Fecha Final:</label>
+                <div class="col-md-10">
+                    @Html.TextBoxFor(model => model.Requerimientos.fechaFinal, new { @class = "form-control datepicker2", placeholder = "DATE" })
                 </div>
-               <!-- <div class="col-md-offset-2 col-md-5">-->
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-md-2">Criterios:</label>
+                <div class="col-md-10">
+                    @Html.TextAreaFor(model => model.criterios.idReqFunc, new { @class = "form-control", rows = "4" })
+                    @Html.ValidationMessageFor(model => model.criterios.criterio, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <form action="demo_form.asp">
+                Criterio: <input type="text" name="t"><br>
+
+            </form>
+            <button onclick="listar()">Try it</button>
+            <script>
+                var c = [];
+                var t;
+                document.getElementById("demo").innerHTML = c;
+
+                function listar() {
+                    t = "VVV";
+                    c.push(t, "<button> Cambiar </button>  <button> Eliminiar </button>  <br> ");
+                    document.getElementById("demo").innerHTML = c;
+                }
+            </script>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-5">
+                    <input type="submit" value="Aceptar" class="btn btn-primary" />
+                    <div class="btn btn-danger" style="color:white;" />
+                    @Html.ActionLink("Cancelar", "Index", null, new { @style = "color:#FFFFFF;" })
+                </div>
+            </div>
+            <!-- <div class="col-md-offset-2 col-md-5">-->
 
 
-                
+
         </div>
 
 }
